Thu Sep 18 17:52:37 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Fix tab reordering, and add the close button
	  code that was commented out (i.e. make it work)

Wed Sep 17 00:08:16 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fix some typos, thanks to Wolfgang Stoeggl

Tue Sep 16 16:30:42 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c:  Fitting dependent axis doesn't work if no
	  function is selected, so just ignore fitting when size is negative
	  rather than doing undefined things.  The whole thing is a mess,
	  we should allow fitting the lines that we draw and such I guess
	  not just functions.

Mon Sep 15 13:29:27 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/compil.c: new string decoding routine interacted with a stupid
	  optimization hence eating string constants from compiled files
	  starting with 'E'

	* src/gnome-genius.c, src/plugin.c: move the examples reading and
	  plugin reading to happen later so that things display seemingly
	  quicker. plus some other very minor optimizations for startup

Fri Sep 12 11:14:14 2014  Jiri (George) Lebl <jirka@5z.com>

	* examples/peano.gel: Add peano example in polar

Tue Sep 09 10:08:38 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: fixes in help/error texts.  Thanks to Marek
	  Černocký

Sat Sep 06 10:24:33 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.gel: fix New Program crash

	* examples/easy-matrix-examples.gel, examples/rsa.gel: Add
	  code for creating nice classroom examples for easily hand
	  computable RREF and eigenvalues, and add an example of computing
	  an RSA key and encryption/decryption with it

Fri Sep 05 21:20:02 2014  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Add PlotWindowPresent

	* examples/*.gel: use the PlotWindowPresent function

	* help/C/genius.xml: document the function

Fri Sep 05 20:46:23 2014  Jiri (George) Lebl <jirka@5z.com>
